--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "~4.2",
-		"erusev/parsedown": "~1.0"
+		"erusev/parsedown": "~1.0",
+		"kzykhys/git": "1.0.x-dev"
 	},
 	"autoload": {
 		"classmap": [
